[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-paper-digest"
version = "0.1.0"
description = "Daily multi-source digest for AI, machine learning, large model, and embodied intelligence papers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "paper-digest-bot" }]
dependencies = []

[project.scripts]
ai-paper-digest = "ai_paper_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
